Fix validation errors and contrast color errors

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,7 +120,7 @@ body {
     color: #000;
 }
 .header-nav a {
-    background: #32cd32;
+    background: #006700;
     border-radius: 50px;
     box-sizing: border-box;
     color: #f5f5f5;
@@ -136,7 +136,7 @@ body {
 a:hover,
 a:focus {
    background: #f5f5f5;
-   color: #32cd32;
+   color: #006700;
 }
 /* Hero image sizing*/
 .image-container > img {
@@ -188,7 +188,7 @@ h2 {
  }
 
 .skill-list > li {
-    background-color: #32cd32;
+    background-color: #006700;
     border-radius: 50px;
     color: #f5f5f5;
     display: block;
@@ -294,7 +294,7 @@ footer {
 }
 
 .header-nav > li {
-  color: limegreen;
+  color: #006700;
   display: inline-block;
   font-family: "Roboto", Helvetica, sans-serif;
   list-style: none;
@@ -317,7 +317,7 @@ footer {
 } 
 
 .skill-list > li {
-  background-color: #32cd32;
+  background-color: #006700;
   border-radius: 99px;
   color: #f5f5f5;
   display: inline-block;
@@ -332,7 +332,7 @@ footer {
 }
  /* PROJECTS STYLES */
 .underConstruction {
-  color: #32cd32;
+  color: #006700;
 }
  
  /* RESUME STYLES */
@@ -405,15 +405,8 @@ span.block {
   text-align: left;
   padding-left: 3vw;
 }
-
-
-
-
-
 .resume-skills {
-  text-align: center;
-
-  
+  text-align: center; 
 }
 h4 {
   padding-left: 3vw;
@@ -430,7 +423,6 @@ h4 {
   padding-left: 10vw;
 
 }
-
 }
 
   
